# euphrates

./: .gitignore  Build.hs  LICENSE  README.md  cabal.project  euphrates.cabal
src/: Euphrates.hs
src/Euphrates/: Core.hs  Top.hs  UART.hs  Utils.hs
test/: Main.hs
test/Euphrates/: Hedgehog.hs  Spec.hs
