cabal-version: 2.2
name:          euphrates
version:       0.0.0.0
license:       BSD-3-Clause
license-file:  LICENSE
copyright:     Copyright (c) 2020, Aiken Cairncross
maintainer:    acairncross@gmail.com
author:        Aiken Cairncross
synopsis:      Maximum flow hardware accelerator
description:
  A Clash implementation of the push relabel algorithm for maximum flow.

category:      Hardware

extra-source-files:
  README.md

source-repository head
  type:     git
  location: https://github.com/acairncross/euphrates.git

library
  exposed-modules:  Euphrates
                    Euphrates.UART
  hs-source-dirs:   src
  default-language: Haskell2010
  ghc-options:
    -Wall
    -fplugin GHC.TypeLits.Extra.Solver
    -fplugin GHC.TypeLits.KnownNat.Solver
    -fplugin GHC.TypeLits.Normalise
    -fexpose-all-unfoldings
    -fno-worker-wrapper

  build-depends:
    base <5,
    clash-prelude,
    ghc-typelits-extra,
    ghc-typelits-knownnat,
    ghc-typelits-natnormalise,
    lens,
    mtl,

executable clash
  main-is:          bin/Clash.hs
  default-language: Haskell2010
  build-depends:
    base <5,
    clash-ghc

  if !os(windows)
    ghc-options: -dynamic

test-suite test
  type:             exitcode-stdio-1.0
  main-is:          Main.hs
  hs-source-dirs:   test
  other-modules:
    Euphrates.Hedgehog
    Euphrates.Spec

  default-language: Haskell2010
  ghc-options:      -Wall
  build-depends:
    base <5,
    clash-prelude,
    euphrates,
    fgl,
    ghc-typelits-extra,
    ghc-typelits-knownnat,
    ghc-typelits-natnormalise,
    hedgehog,
    hspec,
